feat: Integration testing added a cleanup.sql refactor: shouldReturnListOfBookDtoWhenGetBooksCalled use getFirst instead of get(0)